# AgentZone

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  no-pii.yml  release.yml
app/agentzone/: __init__.py  config.py  grants.py  handlers.py  helper.py  keyboards.py  logging_setup.py  main.py  messages.py  models.py  monitor.py
app/bot/: config.py  handlers.py  keyboards.py  main.py
app/bot/services/: expiry_monitor.py  grants.py
app/config/: .env.example
app/scripts/: agentzone_helper.sh
scripts/: check_no_pii.sh  install-git-hooks.sh
tests/: conftest.py  pytest.ini  test_grants_service.py  test_helper_script.py  test_install_sh.py  test_keyboards_and_handlers.py  test_no_pii_guard.py
